# RustmxChat

./: .gitignore  README.md
webserver/: Cargo.toml  docker-compose.yml  package.json  tailwind.config.js
webserver/assets/: output.css
webserver/migration/src/: lib.rs  m20240203_191931_message.rs  m20240302_000001_create_user_table.rs  m20240302_000002_create_user_to_user_chat_table.rs
webserver/src/: main.rs
webserver/src/chat/: database.rs  mod.rs  routes.rs
webserver/src/chat/routes/: chat_page.rs  get_chats.rs  live_chat.rs  mod.rs
webserver/src/entities/: chat.rs  message.rs  mod.rs  prelude.rs  user.rs  user_in_chat.rs
webserver/src/user/: database.rs
webserver/src/user/routes/: create_user.rs
webserver/templates/: another-page.html  base.html  chats.html  chatweb.html  hello.html  message-form.html  message-list.html  todo-form.html
